--- a/submission_842079.ipynb
+++ b/submission_842079.ipynb
@@ -17,10 +17,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from os.path import join\n",
-    "\n",
     "import numpy as np\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from os import path"
    ]
   },
   {
@@ -47,7 +46,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "FNC_train = pd.read_csv(join('Train', 'train_FNC.csv'), index_col=0)"
+    "FNC_train = pd.read_csv(path.join('Train', 'train_FNC.csv'), index_col=0)"
    ]
   },
   {
@@ -65,7 +64,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "SBM_train = pd.read_csv(join('Train', 'train_SBM.csv'), index_col=0)"
+    "SBM_train = pd.read_csv(path.join('Train', 'train_SBM.csv'), index_col=0)"
    ]
   },
   {
@@ -83,7 +82,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "labels = pd.read_csv(join('Train', 'train_labels.csv'), index_col=0)"
+    "labels = pd.read_csv(path.join('Train', 'train_labels.csv'), index_col=0)"
    ]
   },
   {
@@ -141,12 +140,11 @@
     }
    ],
    "source": [
+    "fig = plt.figure(figsize=(18,6))\n",
+    "plot = fig.add_subplot(111, xlabel='feature number', ylabel='score', title='Univariate FNC feature scores')\n",
     "indices = np.arange(FNC_train.shape[-1])\n",
     "FNC_scores = -np.log10(FNC_selector.pvalues_)\n",
     "FNC_scores /= FNC_scores.max()\n",
-    "\n",
-    "fig = plt.figure(figsize=(18,6))\n",
-    "plot = fig.add_subplot(111, xlabel='feature number', ylabel='score', title='Univariate FNC feature scores')\n",
     "plot.plot(indices, FNC_scores, 'r^')\n",
     "plot.vlines(indices, [0], FNC_scores)\n",
     "plt.show()"
@@ -171,12 +169,11 @@
     }
    ],
    "source": [
+    "fig = plt.figure(figsize=(18,6))\n",
+    "plot = fig.add_subplot(111, xlabel='feature number', ylabel='score', title='Univariate SBM feature scores')\n",
     "indices = np.arange(SBM_train.shape[-1])\n",
     "SBM_scores = -np.log10(SBM_selector.pvalues_)\n",
     "SBM_scores /= SBM_scores.max()\n",
-    "\n",
-    "fig = plt.figure(figsize=(18,6))\n",
-    "plot = fig.add_subplot(111, xlabel='feature number', ylabel='score', title='Univariate SBM feature scores')\n",
     "plot.plot(indices, SBM_scores, 'b^')\n",
     "plot.vlines(indices, [0], SBM_scores)\n",
     "plt.show()"
@@ -217,10 +214,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train = pd.concat([\n",
-    "    FNC_train[FNC_features],\n",
-    "    SBM_train[SBM_features],\n",
-    "], axis=1)\n",
+    "X_train = pd.concat([ FNC_train[FNC_features], SBM_train[SBM_features]], axis=1)\n",
     "y_train = labels['Class']"
    ]
   },
@@ -801,7 +795,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "FNC_test = pd.read_csv(join('Test', 'test_FNC.csv'), index_col=0)"
+    "FNC_test = pd.read_csv(path.join('Test', 'test_FNC.csv'), index_col=0)"
    ]
   },
   {
@@ -810,7 +804,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "SBM_test = pd.read_csv(join('Test', 'test_SBM.csv'), index_col=0)"
+    "SBM_test = pd.read_csv(path.join('Test', 'test_SBM.csv'), index_col=0)"
    ]
   },
   {
@@ -1224,10 +1218,7 @@
     }
    ],
    "source": [
-    "X_test = pd.concat([\n",
-    "    FNC_test[FNC_features],\n",
-    "    SBM_test[SBM_features],\n",
-    "], axis=1)\n",
+    "X_test = pd.concat([FNC_test[FNC_features], SBM_test[SBM_features]], axis=1)\n",
     "X_test"
    ]
   },
